force-app/main/default/objects/Project__c/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <formula>AccountId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (Formula)</label>
    <type>Text</type>
</CustomField>