force-app/main/default/objects/Project__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the business sponsor of the project within the Account</inlineHelpText>
    <label>Business Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The contact has to belong to the Project Account</errorMessage>
        <filterItems>
            <field>$Source.AccountId__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>