force-app/main/default/objects/Project__c/fields/Hours_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Consumed__c</fullName>
    <label>Consumed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>