force-app/main/default/objects/Project__c/fields/Hours_Consumed_Billable__c.field-meta.xml
<CustomField>
    <fullName>Hours_Consumed_Billable__c</fullName>
    <label>Hours Consumed Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>