force-app/main/default/objects/Project__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Internal Work</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
                <default>true</default>
                <label>Project</label>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>SalesMarketing</fullName>
                <label>Sales &amp; Marketing</label>
            </value>
            <value>
                <fullName>Self Training</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>