force-app/main/default/objects/Project__c/fields/PricePerHour__c.field-meta.xml
<CustomField>
    <fullName>PricePerHour__c</fullName>
    <label>PricePerHour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>