force-app/main/default/objects/Project__c/fields/ProjectLeadId__c.field-meta.xml
<CustomField>
    <fullName>ProjectLeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>