force-app/main/default/objects/Project__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <formula>HYPERLINK(&quot;https://cloudcoachers.lightning.force.com/lightning/r/Report/00O1p0000059YRxEAM/view?fv0=&quot; &amp; Id, &quot;View&quot; , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report</label>
    <type>Text</type>
</CustomField>