force-app/main/default/objects/Project__c/fields/SF_Survey__c.field-meta.xml
<CustomField>
    <fullName>SF_Survey__c</fullName>
    <description>Field to enter the evaluation of the project gathered through the Salesforce survey</description>
    <label>SF Survey</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>