force-app/main/default/objects/Project__c/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the technical sponsor of the project within the Account, or Salesforce Admin.</inlineHelpText>
    <label>Technical Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The contact has to belong to the Project Account</errorMessage>
        <filterItems>
            <field>$Source.AccountId__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>TechContact</relationshipName>
    <type>Lookup</type>
</CustomField>