force-app/main/default/objects/Project__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>Technology that is part of this project</description>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cloud_Coachers_Technologies</valueSetName>
    </valueSet>
</CustomField>