force-app/main/default/objects/Project__c/fields/Time_consumed__c.field-meta.xml
<CustomField>
    <fullName>Time_consumed__c</fullName>
    <formula>Hours_Consumed__c  / Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time consumed (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>