force-app/main/default/objects/Project__c/fields/Time_Consumed_Billable__c.field-meta.xml
<CustomField>
    <fullName>Time_Consumed_Billable__c</fullName>
    <formula>Hours_Consumed_Billable__c  / Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Consumed (Billable)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>