force-app/main/default/objects/Project__c/fields/TotalPriceBillable__c.field-meta.xml
<CustomField>
    <fullName>TotalPriceBillable__c</fullName>
    <formula>Hours_Consumed_Billable__c *  ABS(PricePerHour__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalPriceBillable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>