force-app/main/default/objects/Project__c/fields/Toupdate__c.field-meta.xml
<CustomField>
    <fullName>Toupdate__c</fullName>
    <label>Toupdate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>