force-app/main/default/objects/Project__c/validationRules/Only_CloudCoachers_Internal_projects.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_CloudCoachers_Internal_projects</fullName>
    <active>true</active>
    <errorConditionFormula>AccountId__c != &apos;00124000010E7r9&apos; &amp;&amp;  ISPICKVAL(Type__c, &apos;Internal&apos;)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Not allowed Type &quot;Internal&quot; for clients projects</errorMessage>
</ValidationRule>