force-app/main/default/objects/Project__c/validationRules/PricePerHour_in_Time_Material_Projects.validationRule-meta.xml
<ValidationRule>
    <fullName>PricePerHour_in_Time_Material_Projects</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Type__c ,&quot;Time and Material (T&amp;M)&quot;) &amp;&amp; ISBLANK( PricePerHour__c )</errorConditionFormula>
    <errorDisplayField>PricePerHour__c</errorDisplayField>
    <errorMessage>Price per hour in mandatory in T&amp;M Projects</errorMessage>
</ValidationRule>