force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>Occupation__c</columns>
    <columns>ProjectLeadId__c</columns>
    <columns>Type__c</columns>
    <columns>Hours_Consumed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Occupation__c</field>
        <operation>equals</operation>
        <value>Project</value>
    </filters>
    <label>All</label>
</ListView>