force-app/main/default/objects/Project__c/listViews/All_Open_Projects_Not_Cloud_Coachers.listView-meta.xml
<ListView>
    <fullName>All_Open_Projects_Not_Cloud_Coachers</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>Status__c</columns>
    <columns>OpportunityId__c</columns>
    <columns>Hours__c</columns>
    <columns>PricePerHour__c</columns>
    <columns>Hours_Consumed__c</columns>
    <columns>Time_consumed__c</columns>
    <columns>ProjectLeadId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountId__c</field>
        <operation>notEqual</operation>
        <value>Cloud Coachers SL</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Finished,SF Survey</value>
    </filters>
    <label>All Open Projects (Not Cloud Coachers)</label>
</ListView>