force-app/main/default/objects/Project__c/listViews/BasicQueueAmazon_Project.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>