force-app/main/default/objects/Project__c/listViews/Cloud_Coachers_Projects.listView-meta.xml
<ListView>
    <fullName>Cloud_Coachers_Projects</fullName>
    <columns>NAME</columns>
    <columns>Hours_Consumed__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Occupation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountId__c</field>
        <operation>equals</operation>
        <value>Cloud Coachers SL</value>
    </filters>
    <label>Cloud Coachers Projects</label>
</ListView>