force-app/main/default/objects/Project__c/listViews/Finished_Projects_Not_Cloud_Coachers.listView-meta.xml
<ListView>
    <fullName>Finished_Projects_Not_Cloud_Coachers</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>Technology__c</columns>
    <columns>Status__c</columns>
    <columns>SF_Survey__c</columns>
    <columns>Hours__c</columns>
    <columns>Hours_Consumed__c</columns>
    <columns>Time_consumed__c</columns>
    <columns>ProjectLeadId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountId__c</field>
        <operation>notEqual</operation>
        <value>Cloud Coachers SL</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Finished,SF Survey</value>
    </filters>
    <label>Finished Projects (Not Cloud Coachers)</label>
</ListView>